force-app/main/default/objects/MobileDevise__c/MobileDevise__c.object-meta.xml
<CustomObject>
    <description>モバイルデバイス</description>
    <label>MobileDevise</label>
    <nameField>
        <label>MobileDevise</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>