force-app/main/default/objects/MobileDevise__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>参照先となる取引先責任者</description>
    <inlineHelpText>テストで生成</inlineHelpText>
    <label>取引先責任者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MobileDevise</relationshipLabel>
    <relationshipName>MobileDevise</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>