force-app/main/default/objects/MobileDevise__c/fields/isPersonal__c.field-meta.xml
<CustomField>
    <fullName>isPersonal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>個人所有か否か</description>
    <inlineHelpText>BYODを意識している</inlineHelpText>
    <label>isPersonal</label>
    <type>Checkbox</type>
</CustomField>